--- a/css/my-first-webpage.css
+++ b/css/my-first-webpage.css
@@ -1,4 +1,16 @@
 h1{
   color: blue;
   text-align: center;
+  font-weight: 300;
+  font-size:larger;
+}
+
+h2{
+  color:goldenrod;
+  font-style:italic;
+  font-family: monospace;
+}
+
+p{
+  line-height: normal;
 }
